--- a/package.json
+++ b/package.json
@@ -29,23 +29,11 @@
   },
   "author": "cristij <joracristi@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
-    "babel-preset-stage-2": "^6.24.1",
     "babel-preset-vue-app": "^1.3.2",
     "bili": "^0.18.2",
-    "bootstrap": "^3.3.7",
-    "eslint-config-rem": "^3.0.0",
-    "gh-pages": "^1.0.0",
-    "node-sass": "^4.6.0",
-    "poi": "^9.1.0",
-    "rollup-plugin-babel": "^2.7.1",
-    "sass-loader": "^6.0.6",
-    "vue": "^2.5.3",
-    "vue-github-badge": "^1.0.0",
-    "vue-router": "^3.0.1",
-    "vue-template-compiler": "^2.5.3",
-    "xo": "^0.18.0"
+    "node-sass": "^9.0.0",
+    "rollup-plugin-babel": "^2.7.1"
   },
   "xo": {
     "extends": "rem/prettier",
